# OOP7

./: CMakeLists.txt  README.md  log.txt  main.cpp  main2.cpp  npc.txt
include/: bear.h  editor.h  npc.h  ork.h  wandering_knight.h
src/: bear.cpp  editor.cpp  npc.cpp  ork.cpp  utils.cpp  wondering_knight.cpp
test/: test.cpp
